Sutter Health/src/objects/Account_Employee_Distribution__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employee Distribution</relationshipLabel>
        <relationshipName>Account_Employee_Distributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>County_Percent__c</fullName>
        <label>County Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>San Joaquin</fullName>
                </value>
                <value>
                    <fullName>Stanislaus</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>San Mateo</fullName>
                </value>
                <value>
                    <fullName>Santa Clara</fullName>
                </value>
                <value>
                    <fullName>Santa Cruz</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Placer</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Solano</fullName>
                </value>
                <value>
                    <fullName>Sutter</fullName>
                </value>
                <value>
                    <fullName>Yolo</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Sonoma</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SSR</fullName>
                </value>
                <value>
                    <fullName>CVR</fullName>
                </value>
                <value>
                    <fullName>EBR</fullName>
                </value>
                <value>
                    <fullName>PCR</fullName>
                </value>
                <value>
                    <fullName>WBR</fullName>
                </value>
                <value>
                    <fullName>OOSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee Distribution</label>
    <nameField>
        <displayFormat>ED-{0000}</displayFormat>
        <label>ED Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Distribution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>County_Cannot_be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(County_Percent__c)),
NOT(ISPICKVAL(Region__c, &apos;OOSA&apos;)),
ISPICKVAL(County__c, &apos;&apos;)
)</errorConditionFormula>
        <errorMessage>County should be selected if County Percent is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>County_Perc_cannot_be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISPICKVAL(County__c, &apos;&apos;)), 
ISBLANK(County_Percent__c) 
)</errorConditionFormula>
        <errorMessage>County Percent cannot be blank if County is selected</errorMessage>
    </validationRules>
</CustomObject>